# dj-database-url

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.rst  dj_database_url.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_dj_database_url.py  tox.ini
.github/workflows/: release.yml  test.yml
dj_database_url/: __init__.py
tests/: test_dj_database_url.py
